force-app/main/default/objects/Policy_Wording_and_Endorsements__c/Policy_Wording_and_Endorsements__c.object-meta.xml
<CustomObject>
    <description>Used to capture policy wording and endorsement of quote/Policy</description>
    <label>Policy Wording and Endorsements</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Wording and Endorsements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>