force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Aggregate__c</fullName>
    <inlineHelpText>Aggregate of an endorsement.</inlineHelpText>
    <label>Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>