force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Conga template of policy wording/endorsement.</inlineHelpText>
    <label>Conga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Policy Wording and Endorsements</relationshipLabel>
    <relationshipName>Policy_Wording_and_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>