force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Coverage_A__c.field-meta.xml
<CustomField>
    <fullName>Coverage_A__c</fullName>
    <inlineHelpText>Coverage A of an endorsement.</inlineHelpText>
    <label>Coverage A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>