force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Coverage_B__c.field-meta.xml
<CustomField>
    <fullName>Coverage_B__c</fullName>
    <inlineHelpText>Coverage B of an endorsement.</inlineHelpText>
    <label>Coverage B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>