force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Coverage_C__c.field-meta.xml
<CustomField>
    <fullName>Coverage_C__c</fullName>
    <inlineHelpText>Coverage C of an endorsement.</inlineHelpText>
    <label>Coverage C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>