force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>225</length>
    <type>Text</type>
</CustomField>