force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Defence_Costs__c.field-meta.xml
<CustomField>
    <fullName>Defence_Costs__c</fullName>
    <label>Defence Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>