force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Each_Loss_Limit__c.field-meta.xml
<CustomField>
    <fullName>Each_Loss_Limit__c</fullName>
    <inlineHelpText>Each Loss Limit of an endorsement.</inlineHelpText>
    <label>Each Loss Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>