force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endorsement_Body__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Body__c</fullName>
    <inlineHelpText>Description of an endorsement.</inlineHelpText>
    <label>Endorsement Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>