force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endorsement_Detail__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Detail__c</fullName>
    <label>Endorsement Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>