force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endorsement_Name__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Name__c</fullName>
    <inlineHelpText>Name of an endorsement.</inlineHelpText>
    <label>Endorsement Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>