force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endorsement_Number__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Number__c</fullName>
    <inlineHelpText>Endorsement Numbder</inlineHelpText>
    <label>Form #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>