force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endorsement_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>225</length>
    <type>Text</type>
</CustomField>