force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Endrosement_No__c.field-meta.xml
<CustomField>
    <fullName>Endrosement_No__c</fullName>
    <formula>Conga_Template__r.Endrosement_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endrosement No</label>
    <type>Text</type>
</CustomField>