force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Execute_Conga_Sign__c.field-meta.xml
<CustomField>
    <fullName>Execute_Conga_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute Conga Sign</label>
    <type>Checkbox</type>
</CustomField>