force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Firm_Rider__c.field-meta.xml
<CustomField>
    <fullName>Firm_Rider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Rider</label>
    <type>Checkbox</type>
</CustomField>