force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <inlineHelpText>Limit of endorsement amount</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>