force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Lines_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Business__c</fullName>
    <label>Lines of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Lines</fullName>
            </value>
            <value>
                <fullName>Commercial Lines</fullName>
            </value>
            <value>
                <fullName>Professional Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>