force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if policy wording/endorsement should be added.</inlineHelpText>
    <label>Opt-in</label>
    <type>Checkbox</type>
</CustomField>