force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Opt_out__c</fullName>
    <label>Opt-out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>