force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated policy record of policy wording/endorsement.</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Policy Wording and Endorsements</relationshipLabel>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>