force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Policy_Wording_and_Endorsement_Codes__c.field-meta.xml
<CustomField>
    <fullName>Policy_Wording_and_Endorsement_Codes__c</fullName>
    <label>Policy Wording and Endorsement Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>