force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Name__c</fullName>
    <label>Portfolio Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>