force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <inlineHelpText>Premium amount of an endorsement.</inlineHelpText>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>