force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Premium_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Premium_Per_Month__c</fullName>
    <formula>Premium__c / Quote__r.Quote_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>