force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Policy Wording and Endorsements</relationshipLabel>
    <relationshipName>Policy_Wording_and_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>