force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Province2__c.field-meta.xml
<CustomField>
    <fullName>Province2__c</fullName>
    <inlineHelpText>Select all the provinces that apply.</inlineHelpText>
    <label>Province</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
                <default>true</default>
                <label>Alberta</label>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
            </value>
            <value>
                <fullName>Northwest Territories</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Nunavut</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Yukon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>