force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated quote record of policy wording/endorsement.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Policy Wording and Endorsements</relationshipLabel>
    <relationshipName>Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>