force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Quote_Expiry_Date_Today_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry_Date_Today_in_Months__c</fullName>
    <formula>12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Expiry Date Today (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>