force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Send_to_Advisor_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Advisor_for_Signature__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; +  Conga_Template__r.Id  +
&quot;&amp;csvisible=1&quot; +
&quot;&amp;CSRecipient1=&quot; +   Policy__r.NameInsured.PersonContactID__c    +

&quot;&amp;qmode=congasign&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send to Advisor for Signature</label>
    <type>Text</type>
</CustomField>