force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <label>Sorting Order #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>