force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Sub_limit__c.field-meta.xml
<CustomField>
    <fullName>Sub_limit__c</fullName>
    <label>Sub-limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>