force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Type of of document.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Policy Wording</fullName>
            </value>
            <value>
                <fullName>Endrosements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>