force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/UL_Limit__c.field-meta.xml
<CustomField>
    <fullName>UL_Limit__c</fullName>
    <inlineHelpText>UL Limit of an endorsement.</inlineHelpText>
    <label>UL Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>