force-app/main/default/objects/Policy_Wording_and_Endorsements__c/fields/UL_Sub_limit__c.field-meta.xml
<CustomField>
    <fullName>UL_Sub_limit__c</fullName>
    <inlineHelpText>UL Sub-limit of an endorsement.</inlineHelpText>
    <label>UL Sub limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>