force-app/main/default/objects/Policy_Wording_and_Endorsements__c/recordTypes/Policy_Wording.recordType-meta.xml
<RecordType>
    <fullName>Policy_Wording</fullName>
    <active>true</active>
    <label>Policy Wording</label>
</RecordType>