force-app/main/default/objects/Policy_Wording_and_Endorsements__c/recordTypes/Policy_Wording_and_Endrosements_of_Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy_Wording_and_Endrosements_of_Policy</fullName>
    <active>true</active>
    <description>Represent policy wording and endorsement of policy</description>
    <label>Policy Wording and Endrosements of Policy</label>
</RecordType>