force-app/main/default/objects/Policy_Wording_and_Endorsements__c/recordTypes/Policy_Wording_and_Endrosements_of_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>Policy_Wording_and_Endrosements_of_Portfolio</fullName>
    <active>false</active>
    <label>Policy Wording and Endrosements of Portfolio</label>
</RecordType>