force-app/main/default/objects/Policy_Wording_and_Endorsements__c/recordTypes/Policy_Wording_and_Endrosements_of_Product.recordType-meta.xml
<RecordType>
    <fullName>Policy_Wording_and_Endrosements_of_Product</fullName>
    <active>true</active>
    <description>Represent policy wording and endorsement of product</description>
    <label>Policy Wording and Endrosements of Product</label>
</RecordType>