force-app/main/default/objects/Policy_Wording_and_Endorsements__c/recordTypes/Policy_Wording_and_Endrosements_of_Quote.recordType-meta.xml
<RecordType>
    <fullName>Policy_Wording_and_Endrosements_of_Quote</fullName>
    <active>true</active>
    <description>Represent policy wording and endorsement of quote</description>
    <label>Policy Wording and Endrosements of Quote</label>
</RecordType>