force-app/main/default/objects/Policy_Wording_and_Endorsements__c/validationRules/Policy_PWE.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_PWE</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Policy_Wording_and_Endrosements_of_Quote&quot;, 
Policy__r.RecordType.DeveloperName =&quot;Non_Program_Policy&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Reinstatement of Quote from Policy</errorMessage>
</ValidationRule>