force-app/main/default/objects/Policy_Wording_and_Endorsements__c/validationRules/Quote_PWE.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_PWE</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Policy_Wording_and_Endrosements_of_Policy&quot;, Quote__r.RecordType.DeveloperName ==&quot;Non_Program_Quote&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Policy Wording &amp; Endorsements of Policy from Quote</errorMessage>
</ValidationRule>